# Mikoshi-SafeGuard

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
examples/: basic_tri_guard.py  llm_safety_wrapper.py  sentinel_integration.py  training_monitor.py
mikoshi_alignment/: __init__.py  adversarial.py  deep_attribution.py  holonomy.py  honesty.py  polytope.py  representation.py  roabp_bridge.py  sentinel_bridge.py  stability.py  tri_guard.py  utils.py
mikoshi_safeguard/: __init__.py  deep_attribution.py  drift.py  honesty.py  polytope.py  representation.py  roabp_bridge.py  sentinel_bridge.py  tri_guard.py
mikoshi_safeguard/sentinel/: __init__.py  audit.py  engine.py  middleware.py  parser.py  policies.py  verifier.py
paper/: README.md  mikoshi-alignment.tex
tests/: test_adversarial.py  test_deep_attribution.py  test_drift.py  test_holonomy.py  test_honesty.py  test_polytope.py  test_representation.py  test_roabp.py  test_sentinel.py  test_stability.py  test_tri_guard.py
