[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mikoshi-alignment"
version = "0.1.0"
description = "Geometric safety verification for AI systems — Tri-Guard framework grounded in N-Frame physics"
authors = [{name = "Mikoshi Ltd", email = "mikoshiuk@gmail.com"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
readme = "README.md"
keywords = ["ai-safety", "alignment", "tri-guard", "n-frame", "geometric-verification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
torch = ["torch>=1.9"]
scipy = ["scipy>=1.7"]
viz = ["matplotlib>=3.4"]
all = ["torch>=1.9", "scipy>=1.7", "matplotlib>=3.4"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/DarrenEdwards111/Mikoshi-AI-Alignment"
Issues = "https://github.com/DarrenEdwards111/Mikoshi-AI-Alignment/issues"
