[build-system]
requires = ["setuptools>=61.0,<75"]
build-backend = "setuptools.build_meta"

[project]
name = "mikoshi-safeguard"
version = "0.2.2"
description = "Runtime safety verification for AI systems (geometric)"
authors = [{name = "Mikoshi Ltd", email = "mikoshiuk@gmail.com"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
readme = "README.md"
keywords = ["ai-safety", "alignment", "tri-guard", "geometric-safety", "geometric-verification", "sentinel", "llm-security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
torch = ["torch>=1.9"]
scipy = ["scipy>=1.7"]
viz = ["matplotlib>=3.4"]
all = ["torch>=1.9", "scipy>=1.7", "matplotlib>=3.4"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/DarrenEdwards111/Mikoshi-SafeGuard"
Issues = "https://github.com/DarrenEdwards111/Mikoshi-SafeGuard/issues"

[tool.setuptools.packages.find]
include = ["mikoshi_safeguard*"]
